--- a/template/Fallstudie/Einleitung/Einleitung.tex
+++ b/template/Fallstudie/Einleitung/Einleitung.tex
@@ -21,16 +21,36 @@ Die Luftverschmutzung ist ebenso verantwortlich für Krankheiten und vorzeitigen
 Feinstaub kann in den Körper eindringen und schwerwiegende Krankheiten auslösen.
 Luftverschmutzung entsteht bei Tierhaltung sowie durch den Einsatz von Pestiziden.
 Eine Ursache sind Abgase die bei der Verbrennung von fossilen Kraftstoffen erzeugt werden.
-Vor allem bei der Verbrennung von fossilen Kraftstoffen spielen Kraftfahrzeuge eine große Rolle.
-
 
 \section{Ausgangssituation}
+Die Folge von globaler Erwärmung sowie die Veränderung des Klimas sind allgegenwärtig und betreffen den gesamten Globus.
+Regionale Veränderungen von Wetter werden fallen immer häufiger extremer aus.
+Starke unregelmäßige Wetterereignisse führen können zu materiellen Schäden an Gebäuden und Infrastrukturen vor allem aber nennenswerte Ertragsverluste der Landwirtschaft.
+Die globale Erderwärmung steigt kontinuierlich an.
+% Benötigt werden Maßnahmen, die sich an unsere Umwelt anpassen kann, 
+% und weitreichende Anstrengungen zur Reduzierung von Umweltbelastungen durch menschliches Handeln. 
+Stark betroffen sind Entwicklungs- und Schwellenländer, die mit Überschwemmungen oder Hitzewellen zu kämpfen müssen.
+
+% Die Resultate der Umweltkatastrophen sind verehrend.
+
+Luftschadstoffe haben massive negative Auswirkungen auf unsere Gesundheit.
+Viele Menschen sind Feinstaubwerten ausgesetzt, die sie als gesundheitsschädlich für den Menschen eingestuft werden können.
+Die Reduktion von Feinstaub ist daher ein wichtiger Teil der Ausgangssituation, die für eine Begrenzung der Erderwärmung unternommen werden müssen.
+
+Deswegen werden in dieser Fallstudie verschiedene Einsparpotenziale für Umweltbelastungen durch autonome Kraftfahrzeuge untersucht.
+
+
 \section{Ziel der Arbeit}
+Das Ziel dieser Arbeit ist die folgende Forschungsfrage nach dem aktuellen Stand der Technik zu beantworten:
+\textit{Welche Auswirkungen haben Kraftfahrzeuge auf die Umwelt und wie kann autonomes Fahren die negativen Auswirkungen reduzieren?}
+Mithilfe von frei zugänglicher Literatur soll diese Frage bearbeitet werden.
+Folgende Hypothese wird untersucht:
+\textit{Je mehr Fahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus}
+
 \section{Aufbau der Arbeit}
 
 
 
-\chapter{Einleitung}
 % Anhand der technologischen Entwicklung, erster Testfelder, sowie Prototypen Industrie stellt  die Frage,
 % welche Umwelteffekte beim autonomen Fahren auftreten werden.
 % Dies hängt mitunter mit neuen Antriebsformen (z. B. Elektroantrieb) und Betriebsmodellen (z. B. geteilte
