--- a/template/Fallstudie/Hauptteil/Hauptteil.tex
+++ b/template/Fallstudie/Hauptteil/Hauptteil.tex
@@ -41,9 +41,7 @@ Die Wirkungen könnten sich mit einer steigenden Marktdurchdringung von autonome
 durch sinkenden stockenden Verkehr sowie eine Reduzierung von Staus bemerkbar machen.
 
 \subsubsection{Kraftstoffeinsparungen auf Autobahnen}
-Erste Abschätzungen zu Kraftstoff\-einsparungen im Individualverkehr auf Autobahnen in\\
-Deutschland wurde vom Fraunhofer
-Institut für Arbeitswirtschaft und Organisation (IAO) vorgenommen.
+Das Fraunhofer Institut für Arbeitswirtschaft und Organisation (IAO) hat erste Schätzungen zu Kraftstoffeinsparungen auf Autobahnen im Individualverkehr in Deutschland vorgenommen.
 
 Dort wurde die Wirkung von drei bereits existierenden Assistenzsystemen (Stau-Chauffeur, Spurwechsel-Chauffeur, Autobahn-Chauffeur)
 der Automatisierungsstufe 3 auf Autobahnen begutachtet.
@@ -96,17 +94,17 @@ Die Menge der  Kraftstoffeinsparungen hängt unter anderem von mehreren Faktoren
 \end{itemize}
 
 \subsubsection{Kraftstoffeinsparungen bei Flottenfahrzeugen}
-Bei Flottenfahrzeugen wäre eine intensivere Nutzung der autonomen Fahrzeuge zu erwarten, wodurch sich der Nutzungszeitraum verkürzt.
-Dadurch werden Flottenfahrzeuge früher ausrangiert.
-Durch das schnelleren wechsel der Flottenfahrzeuge werden Fahrzeuge mit technologischen Erneuerung
-die weniger Luftschadstoffe und Emissionen produzieren schneller eingesetzt.
-Dies könnte im städtischen Bereich zu einer Reduktion von Verkehrsbedingen Luftschadstoffen und Emissionen führen.
+Bei Fahrzeugen die in einer Flotte betrieben werden, ist eine intensivere Nutzung der autonomen Fahrzeuge zu erwarten, wodurch sich der Nutzungszeitraum verkürzt.
+Dadurch werden Flottenfahrzeuge früher ausgetauscht und erneuert.
+Durch den schnellen Wechsel der Flottenfahrzeuge werden können modernere Fahrzeuge mit technologischen Erneuerung
+die weniger Luftschadstoffe und Emissionen produzieren schneller in den Einsatz gebracht werden.
+Dies könnte im dicht besiedelten Gebieten zu einer Reduktion von Verkehrsbedingen Luftschadstoffen und Feinstaub führen.
 
 \subsection{Positive Umwelteinwirkung durch die Reduktion von Fahrzeugen}
 Positive Umwelteinwirkung durch autonomes Fahren kann durch eine
-Reduktion an Fahrzeugen erwartet werden.
+Reduktion am Fahrzeugbestand erwartet werden.
 
-Mobilitatsdienleiter mit autonomen Taxen können
+Mobilitätsdienstleister mit autonomen Taxen können
 Kunden abholen und zu Zielort bringen,
 und vermindern die Notwendigkeit zum Kauf eines Fahrzeugs.
 
