--- a/template/Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex
@@ -1,7 +1,8 @@
 \section{Kraftfahrzeuge}
-% ! Zitat
-\textit{Als Kraftfahrzeuge im Sinne dieses Gesetzes gelten Landfahrzeuge, die durch Maschinenkraft bewegt werden, ohne an Bahngleise gebunden zu sein.}
+Das deutsche Straßenverkehrsgesetz beschreibt Kraftfahrzeuge als Landfahrzeuge, die durch Maschinenkraft bewegt werden, aber nicht an Bahngleise gebunden sind.
 \footnote{Straßenverkehrsgesetz, § 1 Abs. 2}
+
+
 
 Da Kraftfahrzeuge Landfahrzeuge sind gehören Flugzeuge, Schiffe oder Boote nicht zu der Kategorie, obwohl sie durch Maschinenkraft bewegt werden.
 Auch Züge oder Trambahnen gehören nicht in in die Kategorien, da sie an Bahngleise gebunden sind.
