--- a/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
@@ -29,7 +29,7 @@ Neben der Art des Feinstaubes ist unter anderem die Wetterlage für die Verbreit
 
 Luftfeuchtigkeit beeinträchtigt die Ausbreitung von Feinstaub da sich dieser bei geringer Luftfeuchtigkeit länger in Luft halten kann sich besser ausbreiten kann.
 
-Feinstäube werden als Particle Matter (PM, zu deutsch Stoffteilchen) bezeichnet. Diese Luftschadstoffe sind gesundheitsschädlich. \footnote{Westermann S. 327}
+Feinstäube werden als Particle Matter (PM, zu deutsch Stoffteilchen) bezeichnet. Diese Luftschadstoffe sind gesundheitsschädlich.
 
 Unterschieden wird zwischen Feinstaub der aus natürlichen Quellen entstanden ist und Feinstaub der durch menschliches Handeln entstanden ist.
 
