--- a/template/Fallstudie/Einleitung/Einleitung.tex
+++ b/template/Fallstudie/Einleitung/Einleitung.tex
@@ -1,26 +1,44 @@
 \chapter{Einleitung}
 Durch die voranschreitende technische Entwicklung in Industrie, Gewerbe und Landwirtschaft verändert und belastet der Mensch zunehmend die Umwelt.
-Umweltbelastungen können viele Ursachen haben, möglicherweise sind bessere Lösungen technisch
-nicht umsetzbar oder wirtschaftlich unattraktiv.
+Diese Belastungen der Umwelt können viele Ursachen haben,
+möglicherweise sind bessere Lösungen technisch nicht umsetzbar,
+gesetzlich nicht erlaubt oder wirtschaftlich unattraktiv.
+Der aktuelle menschliche Lebensstandard zeichnet sich durch einen
+hohen Energiebedarf, viele verschiedene global industriell gefertigte Produkte
+und einem hohen Verkehrsaufkommen.
+
 Die Umweltbelastung entsteht auf verschieden Ebenen, die sich in ihrer Gegebenheit unterscheiden.
 Es gibt energetische Belastungen, wie Strahlen, Lärm und Erschütterungen.
 Belastungen durch feste Stoffe wie Abfälle welche durch Bau und Abbruch entstehen,
 Abfälle aus Produktionen und
 Abfälle aus der Gewinnung von Bodenschätzen.
-Auch flüssige Stoffe belasten die Umwelt.
-Sie entstehen durch Chemie Fabriken,
-Reste von Medikamenten die durch den Urin in das Abwasser gelangen oder
-durch Umweltkatastrophen bei der sich das Wasser mit andren Stoffen vermischt.
-Ein Beispiel hierfür könnte ein Erbebben sein,
-welches ein Atomkraftwerk beschädigt und radioaktives Wasser ausläuft.
-Die größte Belastung für die Umwelt ist aber die gasförmige Verschmutzung, in From von Luftschadstoffen und Feinstaub.
+
+Auch Flüssigkeiten können die Umwelt belasten.
+Diese für die Umwelt schädlichen Flüssigkeiten können 
+in der Produktion durch Chemie Fabriken,
+durch Reste von Medikamenten in Urin oder durch
+Unfälle bei der Gewinnung von Rohöl in in die Umwelt gelangen.
+Neben den flüssigen Schadstoffen sind auch gasförmige Schadstoffe eine starke Belastung für die Umwelt.
+
+Diese gasförmigen Schadstoffe treten in From von Luftschadstoffen und Feinstaub auf.
+Luftschadstoffe können durch verschiedene Arten entstehen, die sowohl natürlichen Ursprungs aber vor allem 
+durch menschliches Handeln entstehen.
+Neben der Erzeugung von Energie trägt auch das hohe Verkehrsaufkommen zum großen Teil der Luftverschmutzung bei.
+Diese Arten von Luftverschmutzung kann ebenso verantwortlich für Krankheiten und vorzeitigen Tod von Menschen sein.
+Gerade Kinder können davon betroffen sein da ihr Körper noch nicht vollständig ausgewachsen ist, 
+oder ältere Personen dessen Immunsystem nicht mehr gut funktioniert.
+Feinstaub kann in den Körper eindringen und schwerwiegende Krankheiten auslösen.
 Durch unsachgemäße Wiederverwertung können Luftverschmutzungen entstehen,
 wie zum Beispiel die Verbrennung von
-Stromkabeln um das Kupfer aus der Isolierung zu trennen.
-Die Luftverschmutzung ist ebenso verantwortlich für Krankheiten und vorzeitigen Tod von Menschen.
-Feinstaub kann in den Körper eindringen und schwerwiegende Krankheiten auslösen.
-Luftverschmutzung entsteht bei Tierhaltung sowie durch den Einsatz von Pestiziden.
-Eine Ursache sind Abgase die bei der Verbrennung von fossilen Kraftstoffen erzeugt werden.
+Stromkabeln um das Kupfer aus der Isolierung zu trennen,
+Tierhaltung sowie durch den Einsatz von Pestiziden in der Landwirtschaft.
+Ein weiterer Faktor der Luftverschmutzung sind Verbrennungen von fossilen Kraftstoffen und Biomasse.
+
+Die aktuell rasante Entwicklung im Verkehr durch die technische Realisierung von ersten autonomen Kraftfahrzeugen 
+erschließt die Möglichkeit, den Individualverkehr erheblich zu verändern. 
+
+Gerade durch diese Möglichkeiten der technischen Realisierung können von verschiedenen Personenkreisen
+vielfältige Chancen wie ein geringerer Ausstoß von Feinstaub gesehen werden.
 
 \section{Ausgangssituation}
 Die Folge von globaler Erwärmung sowie die Veränderung des Klimas sind allgegenwärtig und betreffen den gesamten Globus.
