--- a/template/Fallstudie/Hauptteil/Hauptteil.tex
+++ b/template/Fallstudie/Hauptteil/Hauptteil.tex
@@ -4,7 +4,9 @@
 
 
 \subsection{Aktueller Stand}
-\subsection{Gesetzliche Regelungen}
+%beispiele von prototypen
+
+\subsubsection{Gesetzliche Regelungen}
 Was ist bereits wo erlaubt?\\
 Welche Länder haben was freigegeben?
 
