--- a/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
@@ -1,6 +1,6 @@
 \subsection{Autonomes Fahren}
-Beim autonomen Fahren, fährt ein \ac{Kfz} Verwaltungsgefäß selbständig.
-Für \ac{Kfz} wurden von der \ac{SAE} Institut in der Norm SAE J3016\footnote{SAE J3016\textunderscore202104 - https://www.sae.org/standards/content/j3016\textunderscore202104} Automatisierungsgrade definiert.
+Beim autonomen Fahren, fährt ein Kraftfahrzeug Verwaltungsgemäß selbständig.
+Für Kraftfahrzeuge wurden von der \ac{SAE} Institut in der Norm SAE J3016\footnote{SAE J3016\textunderscore202104 - https://www.sae.org/standards/content/j3016\textunderscore202104} Automatisierungsgrade definiert.
 \begin{itemize}
 	\item Stufe 0 (Keine Automation)
 	\item Stufe 1 (Assistenzsysteme)
@@ -25,10 +25,10 @@ In der Stufe 0 (Keine Automation):
 
 In der Stufe 1 (Assistenzsysteme):
 \begin{itemize}
-	\item Assistenzsysteme wie \ac{GRA} oder eine Berganfahrhilfe
+	\item Assistenzsysteme wie ein System zur automatischen Geschwindigkeitsregelung oder eine Berganfahrhilfe
 	\item Fahrer hat eine passive Unterstützung bei Fahraufgaben
 	\item \ac{Kfz} kann keine Fahraufgaben übernehmen
-	\item das \ac{Kfz} ist unter permanenter Kontrolle des Fahrers
+	\item Fahrer muss jeder Zeit die Fahraufgabe übernehmen können
 \end{itemize}
 
 \vspace{0.5cm}
