--- a/template/Fallstudie/Einleitung/Einleitung.tex
+++ b/template/Fallstudie/Einleitung/Einleitung.tex
@@ -14,18 +14,18 @@ Abfälle aus Produktionen und
 Abfälle aus der Gewinnung von Bodenschätzen.
 
 Auch Flüssigkeiten können die Umwelt belasten.
-Diese für die Umwelt schädlichen Flüssigkeiten können 
+Diese für die Umwelt schädlichen Flüssigkeiten können
 in der Produktion durch Chemie Fabriken,
 durch Reste von Medikamenten in Urin oder durch
 Unfälle bei der Gewinnung von Rohöl in in die Umwelt gelangen.
 Neben den flüssigen Schadstoffen sind auch gasförmige Schadstoffe eine starke Belastung für die Umwelt.
 
 Diese gasförmigen Schadstoffe treten in From von Luftschadstoffen und Feinstaub auf.
-Luftschadstoffe können durch verschiedene Arten entstehen, die sowohl natürlichen Ursprungs aber vor allem 
+Luftschadstoffe können durch verschiedene Arten entstehen, die sowohl natürlichen Ursprungs aber vor allem
 durch menschliches Handeln entstehen.
 Neben der Erzeugung von Energie trägt auch das hohe Verkehrsaufkommen zum großen Teil der Luftverschmutzung bei.
 Diese Arten von Luftverschmutzung kann ebenso verantwortlich für Krankheiten und vorzeitigen Tod von Menschen sein.
-Gerade Kinder können davon betroffen sein da ihr Körper noch nicht vollständig ausgewachsen ist, 
+Gerade Kinder können davon betroffen sein da ihr Körper noch nicht vollständig ausgewachsen ist,
 oder ältere Personen dessen Immunsystem nicht mehr gut funktioniert.
 Feinstaub kann in den Körper eindringen und schwerwiegende Krankheiten auslösen.
 Durch unsachgemäße Wiederverwertung können Luftverschmutzungen entstehen,
@@ -34,15 +34,15 @@ Stromkabeln um das Kupfer aus der Isolierung zu trennen,
 Tierhaltung sowie durch den Einsatz von Pestiziden in der Landwirtschaft.
 Ein weiterer Faktor der Luftverschmutzung sind Verbrennungen von fossilen Kraftstoffen und Biomasse.
 
-Die aktuell rasante Entwicklung im Verkehr durch die technische Realisierung von ersten autonomen Kraftfahrzeugen 
-erschließt die Möglichkeit, den Individualverkehr erheblich zu verändern. 
+Die aktuell rasante Entwicklung im Verkehr durch die technische Realisierung von ersten autonomen Kraftfahrzeugen
+erschließt die Möglichkeit, den Individualverkehr erheblich zu verändern.
 
 Gerade durch diese Möglichkeiten der technischen Realisierung können von verschiedenen Personenkreisen
 vielfältige Chancen wie ein geringerer Ausstoß von Feinstaub gesehen werden.
 
 \section{Ausgangssituation}
 Die Folge von globaler Erwärmung sowie die Veränderung des Klimas sind allgegenwärtig und betreffen den gesamten Globus.
-Regionale Veränderungen von Wetter werden fallen immer häufiger extremer aus.
+Regionale Veränderungen von Wetter fallen immer häufiger extremer aus.
 Starke unregelmäßige Wetterereignisse führen können zu materiellen Schäden an Gebäuden und Infrastrukturen vor allem aber nennenswerte Ertragsverluste der Landwirtschaft.
 Die globale Erderwärmung steigt kontinuierlich an.
 % Benötigt werden Maßnahmen, die sich an unsere Umwelt anpassen kann, 
@@ -95,10 +95,10 @@ Folgende Hypothese wird untersucht:
 
 
 
-\subsection{Klimaschutzziele}
-Wer bestimmt Klimaschutzziele?
-Welche Klimaschutzziele gibt es?
-Welche Klimaschutzziele sollen erreicht werden?
+% \subsection{Klimaschutzziele}
+% Wer bestimmt Klimaschutzziele?
+% Welche Klimaschutzziele gibt es?
+% Welche Klimaschutzziele sollen erreicht werden?
 
 
 
