--- a/template/Fallstudie/Hauptteil/Hauptteil.tex
+++ b/template/Fallstudie/Hauptteil/Hauptteil.tex
@@ -7,13 +7,25 @@
 %beispiele von prototypen
 
 \subsubsection{Gesetzliche Regelungen}
-Was ist bereits wo erlaubt?\\
-Welche Länder haben was freigegeben?
+Deutschland könnte ein Vorreiter für autonomen Fahren werden, und das daraus resultierende mögliche Potential schnell in den Straßenverkehr bringen.
+
+Am 21. Juni 2017 würde ein Gesetzt erlassen welches autonomes Fahren in gewissen Situationen ermöglicht.
+Im Jahr 2022 möchte Deutschland autonome Kraftfahrzeuge die sich in der Stufe 4 befinden in öffentlichen Straßenverkehr bringen.
+
+Neben technischen Anforderungen, wurde auch die Prüfung zur Erteilung der Betriebserlaubnis überarbeitet.
+Ferner it es nun möglich gewisse Funktionen nachträglich Freizuschalten oder zu deaktivieren.
+% \footnote{https://www.bmvi.de/SharedDocs/DE/Anlage/Gesetze/Gesetze-19/gesetz-aenderung-strassenverkehrsgesetz-pflichtversicherungsgesetz-autonomes-fahren.pdf?__blob=publicationFile}
 
 
-\section{Erkenntnisse}
-Hauptsächlich wird Sicherheit und die Senkung schädlicher Emissionen sowie das Erreichen der
-Klimaschutzziele im Verkehr die größte Rolle spielen.
+
+\section{Erwartungen an autonome Fahrzeuge}
+2019 haben das
+Bundesministerium für Bildung und Forschung (BMBF) zusammen mit dem
+Bundesministerium für Wirtschaft und Energie (BMWi) und dem
+Bundesministerium für Verkehr und digitale Infrastruktur (BMVI)
+eine Plan für die Forschung am autonomen Fahren beschlossen.
+
+Dieser Plan soll sich an vielen Punkten orientieren wie unter anderem Sicherheit, Effizienz, Nachhaltigkeit, Barrierefreiheit, Bezahlbarkeit.
 
 \subsection{Umwelt- und Klimaeffekte}
 Die Umwelt- und Klimaeffekte durch autonomes Fahren ist durch die Vielzahl der Verknüpfungen mit anderen Technologien wie Elektromobilität
@@ -117,9 +129,8 @@ Dadurch könnte auf ungefähr 200 Tausend Fahrzeuge verzichtet werden.
 	Mobilitätsdienstleistungen: Neue Infrastrukturen für
 	die Verkehrswende im Automobilsektor, S. 42}
 
-\subsection{Beschreibung der verwendeten Untersuchungsmittel}
-
 \subsection{Diskussion der Forschungsfrage}
+
 
 \subsection{Gründe für die Wahl der Hypothese}
 
