--- a/template/Fallstudie/Hauptteil/Hauptteil.tex
+++ b/template/Fallstudie/Hauptteil/Hauptteil.tex
@@ -130,14 +130,18 @@ Dadurch könnte auf ungefähr 200 Tausend Fahrzeuge verzichtet werden.
 	die Verkehrswende im Automobilsektor, S. 42}
 
 \subsection{Diskussion der Forschungsfrage}
+Bei der Betrachtung der Frage welche Auswirkungen Kraftfahrzeuge auf die Umwelt haben, und wie autonomes Fahren die negativen Auswirkungen reduzieren kann
+können die zusammen gestellten Informationen in dieser Fallstudie herangezogen werden.
+Mit Hilfe dieser Informationen kann die Forschungsfrage folgendermaßen beantwortet werden:
 
+Autonomes Fahren alleine kann die negativen Auswirkungen von Kraftfahrerzeugen auf die Umwelt nicht reduzieren.
+Viel mehr kann ein Verbund neuer Technologien und Verhaltensmuster die zusammen spielen negative Auswirkungen reduzieren.
 
 \subsection{Gründe für die Wahl der Hypothese}
-
-\subsection{Darstellung und Diskussion der Erkenntnisse aus der Literatur}
-
-\subsection{Schlussfolgerungen auf die Forschungsfrage}
-
-\subsection{Verifikation der Hypothese}
-
-\subsection{Praktische Konsequenzen}
+Bei der Begründung der Hypothese \textit{Je mehr Fahrzeuge
+	autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus}
+fällt auf dass diese aufgrund von fehlender Datenlage und Langzeitstudien nicht beantwortet werden kann.
+In Zukunft kann sich zeigen in welche Richtung sich der Trend bewegend wird.
+Während autonome Systeme in manchen Situationen dem menschlichen Fahrverhalten überlegen sin könnten,
+können sie auch der Bedarf und die Möglichkeit für jene erschließen die andernfalls gar auf eine Fahrt in einem Kraftfahrzeug
+verzichtet hätten und somit eine etwaige Reduktionen durch Effizienz mit einem gesteigerten Nutzen aufgehoben oder gar verschlechtert werden könnten.
