--- a/template/Fallstudie/Schluss/Schluss.tex
+++ b/template/Fallstudie/Schluss/Schluss.tex
@@ -1,4 +1,8 @@
 \chapter{Schluss}
 \section{Zusammenfassung der Erkenntnisse}
-\section{Offene Fragen}
-\section{Ausblick auf möglich weitere Entwicklungen}
+Gerade Luftschadstoffe können verehrende Wirkung auf Menschen und deren Umwelt haben.
+Diese Luftschadstoffe entstehen nicht nur durch durch Produktion von Kraftfahrzeugen, vor allem aber durch den Betrieb.
+Gerade die Verbrennung von fossilen Kraftstoffen und der Abrieb von Reifen und Bremsen können in Betrachtung genommen werden.
+
+Im Allgemeinen kann festgehalten werden, dass autonomes Fahren Veränderungen mit sich bringen kann.
+Wie diese sich diese letztlich zeigen wird hängt von unterschiedlichen Faktoren ab.
