schluss und aufbau

--- a/template/Fallstudie/Einleitung/Einleitung.tex
+++ b/template/Fallstudie/Einleitung/Einleitung.tex
@@ -66,8 +66,12 @@ Folgende Hypothese wird untersucht:
 \textit{Je mehr Fahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus}
 
 \section{Aufbau der Arbeit}
-
-
+Der Aufbau dieser Arbeit besteht aus mehreren Teilen.
+Zuerst wird ein Überblick über die technischen Teilsysteme von Kraftfahrzeugen gegeben, und wie diese
+in Klassen Eingeordnet werden.
+Da autonomes fahren eine aktuelle Entwicklung ist wird in einem Teil erläutert in welchen Stufen die Fähigkeiten der Fahrzeuge Eingeordnet werden können.
+Ferne werden negative Belastungen auf die Umwelt durch Kraftfahrzeuge eingegangen und wie diese entstehen.
+Untersucht werden auch an welchen Stellen eine Reduzierung von negativen Einflüssen möglich ist.
 
 % Anhand der technologischen Entwicklung, erster Testfelder, sowie Prototypen Industrie stellt  die Frage,
 % welche Umwelteffekte beim autonomen Fahren auftreten werden.
