--- a/template/Fallstudie/Hauptteil/Hauptteil.tex
+++ b/template/Fallstudie/Hauptteil/Hauptteil.tex
@@ -2,11 +2,7 @@
 \input{Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex}
 
 
-
-\subsection{Aktueller Stand}
-%beispiele von prototypen
-
-\subsubsection{Gesetzliche Regelungen}
+\subsection{Gesetzliche Regelungen}
 Deutschland könnte ein Vorreiter für autonomen Fahren werden, und das daraus resultierende mögliche Potential schnell in den Straßenverkehr bringen.
 
 Am 21. Juni 2017 würde ein Gesetzt erlassen welches autonomes Fahren in gewissen Situationen ermöglicht.
