--- a/template/titlepage.tex
+++ b/template/titlepage.tex
@@ -31,7 +31,7 @@
 		\vspace{0.2cm}
 		Im Rahmen des Moduls\\
 		\vspace{0.5cm}
-		Arbeitsmethoden und Softwareunterstützung\\
+		Fallstudie / Wissenschaftliches Arbeiten\\
 		\vspace{2cm}
 		Über das Thema\\
 		\vspace{0.5cm}
