--- a/template/Fallstudie/Einleitung/Einleitung.tex
+++ b/template/Fallstudie/Einleitung/Einleitung.tex
@@ -24,7 +24,7 @@ Diese gasförmigen Schadstoffe treten in From von Luftschadstoffen und Feinstaub
 Luftschadstoffe können durch verschiedene Arten entstehen, die sowohl natürlichen Ursprungs aber vor allem
 durch menschliches Handeln entstehen.
 Neben der Erzeugung von Energie trägt auch das hohe Verkehrsaufkommen zum großen Teil der Luftverschmutzung bei.
-Diese Arten von Luftverschmutzung kann ebenso verantwortlich für Krankheiten und vorzeitigen Tod von Menschen sein.
+Diese Arten von Luftverschmutzung können ebenso verantwortlich für Krankheiten und vorzeitigen Tod von Menschen sein.
 Gerade Kinder können davon betroffen sein da ihr Körper noch nicht vollständig ausgewachsen ist,
 oder ältere Personen dessen Immunsystem nicht mehr gut funktioniert.
 Feinstaub kann in den Körper eindringen und schwerwiegende Krankheiten auslösen.
@@ -43,7 +43,7 @@ vielfältige Chancen wie ein geringerer Ausstoß von Feinstaub gesehen werden.
 \section{Ausgangssituation}
 Die Folge von globaler Erwärmung sowie die Veränderung des Klimas sind allgegenwärtig und betreffen den gesamten Globus.
 Regionale Veränderungen von Wetter fallen immer häufiger extremer aus.
-Starke unregelmäßige Wetterereignisse führen können zu materiellen Schäden an Gebäuden und Infrastrukturen vor allem aber nennenswerte Ertragsverluste der Landwirtschaft.
+Starke unregelmäßige Wetterereignisse führen zu materiellen Schäden an Gebäuden und Infrastrukturen, vor allem zu nennenswerten Ertragsverlusten in der Landwirtschaft.
 Die globale Erderwärmung steigt kontinuierlich an.
 % Benötigt werden Maßnahmen, die sich an unsere Umwelt anpassen kann, 
 % und weitreichende Anstrengungen zur Reduzierung von Umweltbelastungen durch menschliches Handeln. 
