--- a/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
@@ -34,17 +34,17 @@ Die Arbeitseinheit ist die Verbindung zwischen den Antriebsrädern und der Fahrb
 Durch die Bewegung der Antriebsrädern wird das Kraftfahrzeug in Bewegung gesetzt.
 
 \subsubsection{Energieübertragungseinheit}
-Die Energieübertragungseinheit leitet die Energie in der geforderten Bewegungsart und Bewegungsgeschwindigkeit zur Arbeitseinheit weiter.
+Die Energieübertragungseinheit leitet die Energie in der geforderten Bewegungsart und Bewegungsgeschwindigkeit zu der Arbeitseinheit weiter.
 
-Energieübertragungseinheiten sind Baugruppen einer Maschine, die zur Übertragung von Energie in benötigt werden.
-Beispiel hierfür sind Kabel die Elektrische Energie leiten oder Wellen, Zahnräder oder Riemen die mechanische Energie weiterleiten.
+Energieübertragungseinheiten sind Baugruppen einer Maschine, die zur Übertragung von Energie benötigt werden.
+Beispiel hierfür sind Kabel die elektrische Energie leiten oder Wellen, Zahnräder und Riemen die mechanisches Drehmoment übertragen.
 
 \subsubsection{Stütz- und Trageeinheit}
-Stütz- und Trageeinheit der Rahmen oder der selbsttragende Aufbau des Kraftfahrzeuges haben hauptsächlich die Aufgabe, die Teilsysteme aufzunehmen und zu einer Einheit zu verbinden.
-
+Der Rahmen oder der selbsttragende Aufbau eines Kraftfahrzeuges ist die Stütz- und Trageeinheit.
+Diese haben hauptsächlich die Aufgabe, die Teilsysteme aufzunehmen und zu einer Einheit zu verbinden.
 
 \subsubsection{Steuerungs- und Regelungseinheit}
-Die Steuerungs- und Regelungseinheit beeinflusst die Stoff- und Energieumsetzung durch Informationsverarbeitung
+Die Steuerungs- und Regelungseinheit beeinflusst die Stoff- und Energieumsetzung durch Informationsverarbeitung.
 
 \subsubsection{Steuerungseinheit}
 Bei der Steuerungseinheit werden verschiedene Eingangsgrößen durch das System in eine oder mehrere Ausgangsgrößen verändert.
