--- a/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
@@ -17,33 +17,33 @@ Die Stufen unterscheiden sich im wesentlichen nur durch die Anzahl der Automatis
 In der Stufe 0 (Keine Automation):
 \begin{itemize}
 	\item keine Assistenzsysteme
-	\item \ac{Kfz} kann keine Fahraufgaben übernehmen
-	\item Fahrer ist unter permanenter Kontrolle
+	\item Kraftfahrzeug kann keine Fahraufgaben übernehmen
+	\item Fahrer kontrolliert permanent das Fahrzeug
 \end{itemize}
 
 \vspace{0.5cm}
 
 In der Stufe 1 (Assistenzsysteme):
 \begin{itemize}
-	\item Assistenzsysteme wie ein System zur automatischen Geschwindigkeitsregelung oder eine Berganfahrhilfe
+	\item Assistenzsysteme wie zum Beispiel ein System zur automatischen Geschwindigkeitsregelung oder eine Berganfahrhilfe
 	\item Fahrer hat eine passive Unterstützung bei Fahraufgaben
-	\item \ac{Kfz} kann keine Fahraufgaben übernehmen
-	\item Fahrer muss jeder Zeit die Fahraufgabe übernehmen können
+	\item Kraftfahrzeug kann keine Fahraufgaben übernehmen
+	\item Fahrer kontrolliert permanent das Fahrzeug
 \end{itemize}
 
 \vspace{0.5cm}
 
 In der Stufe 2 (Teilautomatisierung):
 \begin{itemize}
-	\item Assistenzsysteme, wie der Spurführungsassistent oder Stauassistent
+	\item Assistenzsysteme, wie zum Beispiel der Spurführungsassistent oder Stauassistent
 	      \begin{itemize}
 		      \item automatisch bremsen
 		      \item automatisch beschleunigen
 		      \item automatisch lenken
 	      \end{itemize}
-	\item \ac{Kfz} kann Fahraufgaben teilautomatisiert übernehmen
+	\item Kraftfahrzeug kann Fahraufgaben teilautomatisiert übernehmen
 	\item Fahrer kann sich für kurze Zeit von den Fahraufgaben abwenden
-	\item Fahrer muss jeder Zeit die Fahraufgabe übernehmen können
+	\item Fahrer muss jeder Zeit die teilautomatisierte Fahraufgabe übernehmen können
 \end{itemize}
 
 \vspace{0.5cm}
@@ -51,9 +51,9 @@ In der Stufe 2 (Teilautomatisierung):
 In der Stufe 3 (Bedingte Automatisierung):
 \begin{itemize}
 	\item hochautomatisierte Assistenzsysteme
-	\item \ac{Kfz} kann Fahraufgaben unter bestimmten Voraussetzungen vollständig übernehmen
-	\item Fahrer kann sich unter bestimmten Voraussetzungen dauerhaft von den Fahraufgaben abwenden
-	\item Fahrer muss innerhalb wenigen Sekunden die Fahraufgabe übernehmen können
+	\item Kraftfahrzeug kann Fahraufgaben unter bestimmten Voraussetzungen vollständig übernehmen
+	\item Fahrer kann sich unter bestimmten Voraussetzungen von den Fahraufgaben abwenden
+	\item Fahrer muss innerhalb von wenigen Sekunden die Fahraufgabe übernehmen können
 \end{itemize}
 
 \vspace{0.5cm}
@@ -61,8 +61,8 @@ In der Stufe 3 (Bedingte Automatisierung):
 In der Stufe 4 (Hochautomatisierung):
 \begin{itemize}
 	\item hochautomatisierte Assistenzsysteme
-	\item \ac{Kfz} kann Fahraufgaben in hochkomplexen Verkehrssituationen vollständig übernehmen
-	\item Fahrer dauerhaft von den Fahraufgaben abwenden
+	\item Kraftfahrzeug kann Fahraufgaben in hochkomplexen Verkehrssituationen vollständig übernehmen
+	\item Fahrer kann sich von den Fahraufgaben abwenden
 	\item Fahrer muss fahrtüchtig sein, um im Bedarfsfall die Fahraufgabe übernehmen zu können
 \end{itemize}
 
@@ -71,19 +71,19 @@ In der Stufe 4 (Hochautomatisierung):
 In der Stufe 5 (Vollautomatisierung):
 \begin{itemize}
 	\item hochautomatisierte Assistenzsysteme
-	\item \ac{Kfz} übernimmt alle Fahraufgaben vollständig
+	\item Kraftfahrzeug übernimmt alle Fahraufgaben vollständig
 	\item Fahrer ist nicht erforderlich
 	\item alle Personen im Wagen werden zu Passagieren
 \end{itemize}
 
 \subsection{Autonome Kraftfahrzeuge}
-Sind Fahrzeuge die nicht nur automatisch fahren sondern von einem System gesteuert werden.
+Autonome Kraftfahrzeuge sind Fahrzeuge die nicht nur automatisch fahren sondern von einem System gesteuert werden.
 Somit sind diese Fahrzeuge aus Sicht der Nutzenden autonom.
 
 Während manche in der Verbreitung autonomer Fahrzeuge die Lösung vieler Probleme sehen können,
 vermuten andere eine Verschlechterung der Verkehrs- und Umweltlage.
 
-Die Bedeutung von autonomen Fahrzeugen, hängt sowohl von der technischen Komplexität sowie von politischen Regulierung ab.
+Die Bedeutung von autonomen Fahrzeugen hängt sowohl von der technischen Komplexität als auch von den politischen Regulierung ab.
 
-In welchem Maß die Level 5 Systeme im Straßenverkehr teilnehmen entscheidet vorerst der gesetzliche Rahmen.
-Dies ist wiederum abhängig wie der Verkehr von morgen aussehen soll.
+In welchem Maß das Level 5 System im Straßenverkehr teilnimmt entscheidet vorerst der gesetzliche Rahmen.
+Dies ist wiederum abhängig wie der zukünftige Verkehr aussehen soll.
