--- a/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
@@ -1,8 +1,8 @@
 \subsection{Fahrzeugklassen}
 
 Kraftfahrzeuge können Bauartbedingt in Kategorien eingeordnet werden.
-Die EU Kommission hat hierfür acht Klassen definiert.\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
-	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}
+Die EU Kommission hat hierfür acht Klassen definiert\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
+	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}:
 
 \begin{itemize}
 	\item Klasse L: Leichte ein- und zweispurige Kraftfahrzeuge
@@ -17,7 +17,8 @@ Die EU Kommission hat hierfür acht Klassen definiert.\footnote{VERORDNUNG (EU) 
 \end{itemize}
 
 Die relevantesten Klassen sind M und N.
-\vspace{0.5cm}
+
+\newpage
 
 \subsection{Klasse M}
 In der Klasse M werden Kraftfahrerzeuge eingeordnet die für die Beförderung von Personen und Gepäck zuständig sind und mindestens 4 Räder haben sowie eine Hochgeschwindigkeit von über 25 \ac{kmh} haben.
@@ -74,11 +75,16 @@ In der Klasse N1 sind Kraftfahrzeuge die in dicht besiedelten Regionen gut zurec
 
 
 \subsubsection{Klasse N2}
-Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von zu 3,5 \ac{t} bis 12 \ac*{t}.
-In der Klasse N2 sind Kraftfahrzeuge die regional Güterbefördern, dies könnten Kraftfahrzeuge die Waren aus einem Zentrallager in die Filialen transportieren.
-Diese Kraftfahrzeuge sind darauf ausgelegt hunderte Kilometer zurückzulegen.
+Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von 3,5 \ac{t} bis 12 \ac{t}.
+In der Klasse N2 sind Kraftfahrzeuge die Regionalgüter befördern.
 
+Diese Kraftfahrerzeuge können die Waren aus einem Zentrallager in die Filialen transportieren
+und sind darauf ausgelegt hunderte Kilometer zurück legen zu können.
 
-\subsubsection{KLasse N3}
-Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von mehr als 12 \ac{t}.
-In der Klasse N3 sind Kraftfahrzeuge die überregional Güterbefördern, wie ein Kraftfahrzeug das große Mengen an Ladung fassen kann und darauf ausgelegt sind tausende Kilometer zurückzulegen.
+\subsubsection{Klasse N3}
+Dazu gehören Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von mehr als 12 \ac{t}.
+In der Klasse N3 sind Kraftfahrzeuge die überregionale Güter befördern.
+
+Diese Kraftfahrerzeuge können ein vielfaches der Ladung als Fahrzeuge der Klasse N2 aufnehmen
+und sind darauf ausgelegt tausende Kilometer zurück zulegen.
+
