--- a/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
@@ -60,6 +60,8 @@ Beispiele für Steuerungen sind:
 	      Das Umgebungslicht wird nicht berücksichtigt.
 \end{itemize}
 
+\newpage
+
 \subsubsection{Regelungseinheit}
 Bei einer Regelungseinheit werden die Eingangsgrößen mit einem Sollwert verglichen und so lange angepasst bis der Sollwert erreicht wird.
 Beispiele für Regelungen sind:
