--- a/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
@@ -13,21 +13,21 @@ Feinstaub der durch die Verbrennung, sowohl auch durch den Abrieb von Reifen und
 und die Infrastruktur der Straßen, Parkplätze und anderer Einrichtungen.
 
 \subsection{Verbrennungsabgase}
-Durch Verbrennung von Kraftstoffen entstehen verschied giftige Schadstoffe:
+Durch Verbrennung von Kraftstoffen entstehen verschiedene giftige Schadstoffe:
 \begin{itemize}
 	\item {\ac{CO}}
 	\item {\ac{NO}}
 	\item unverbrannte Kohlenwasserstoffe (HC)
 \end{itemize}
 Die Abgase strömen nach der Verbrennung im Verbrennungsraum durch die Abgasanlage in die Umwelt.
-Es gibt auch ungiftige Stoffe die durch die Verbrennung abgegeben werden wie \ac{zb} \ac{Wasser} und \ac{CO2}.
+Es gibt auch ungiftige Stoffe die durch die Verbrennung abgegeben werden wie zum Beispiel \ac{Wasser} und \ac{CO2}.
 Die Menge der Abgase die durch die Abgasanlage strömen ist von der Größe des Motors sowie dem Lastzustand des Motors abhängig.
 
 \subsection{Feinstaub}
 Feinstaub ist ein fester oder flüssiger Stoff der nicht sofort zu Boden sinkt.
 Neben der Art des Feinstaubes ist unter anderem die Wetterlage für die Verbreitung und Absenkung von Feinstaub entscheidend.
 
-Luftfeuchtigkeit beeinträchtigt die Ausbreitung von Feinstaub da sich dieser bei geringer Luftfeuchtigkeit länger in Luft halten kann sich besser ausbreiten kann.
+Luftfeuchtigkeit beeinträchtigt die Ausbreitung von Feinstaub da sich dieser bei geringer Luftfeuchtigkeit länger in der Luft halten kann und sich besser ausbreiten kann.
 
 Feinstäube werden als Particle Matter (PM, zu deutsch Stoffteilchen) bezeichnet. Diese Luftschadstoffe sind gesundheitsschädlich.
 
